--- a/AsianApi/AsianApi.csproj
+++ b/AsianApi/AsianApi.csproj
@@ -77,6 +77,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MySql.Data, Version=5.0.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -115,6 +119,7 @@
     <Compile Include="Api\Model\Ou.cs" />
     <Compile Include="Api\Model\Subevent.cs" />
     <Compile Include="Api\Model\Team.cs" />
+    <Compile Include="BaseUp.cs" />
     <Compile Include="DataGrid.cs" />
     <Compile Include="loginForm.cs">
       <SubType>Form</SubType>
